<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">yeoman0.1</string>
    <string name="action_settings">Settings</string>
    <string name="name">name</string>
    <string name="att1">yeoman0.1</string>
    <string name="main_view_title">Entity List</string>
    <string name="title_activity_edit_entity">editEntity</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_entity">Edit Entity</string>
    <string name="edit_effect">Edit Effect</string>
    <string name="effect_list">See All Effects</string>
    <string name="add_entity">Add Entity</string>
    <string name="add_effect">Add Effect</string>
    <string name="clear_table">Clear Entity List</string>
    <string name="delete_entity">Remove Entity</string>
    <string name="delete_effect">Remove Effect</string>
    <string name="timer">Next Turn</string>
    <string name="title_activity_edit_effect">editEffect</string>
    <string name="title_activity_effect_list">effectList</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_entity">createEntity</string>
    <string name="title_activity_create_effect">createEffect</string>

</resources>
