<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools" tools:context=".MainViewScreen">
<item android:id="@+id/action_settings" android:title="@string/action_settings"
    android:orderInCategory="100" app:showAsAction="never" />
<item android:id="@+id/addEntity"
    android:title="@string/add_entity"/>
<item android:id="@+id/editEntity"
    android:title="@string/edit_entity"/>
<item android:id="@+id/deleteEntity"
    android:title="@string/delete_entity"/>
<item android:id="@+id/addEffect"
    android:title="@string/add_effect"/>
<item android:id="@+id/editEffect"
    android:title="@string/edit_effect"/>
<item android:id="@+id/deleteEffect"
    android:title="@string/delete_effect"/>
<item android:id="@+id/effectList"
    android:title="@string/effect_list"/>
<item android:id="@+id/timer"
    android:title="@string/timer"/>

</menu>
